@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-04-08"
+#define RUBY_RELEASE_DATE "2009-05-26"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20090408
-#define RUBY_PATCHLEVEL 160
+#define RUBY_RELEASE_CODE 20090526
+#define RUBY_PATCHLEVEL 161
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2009
-#define RUBY_RELEASE_MONTH 4
-#define RUBY_RELEASE_DAY 8
+#define RUBY_RELEASE_MONTH 5
+#define RUBY_RELEASE_DAY 26
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
